# osgt-qol

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  patches.txt
dep/: CMakeLists.txt
scripts/: copy-and-run.bat
src/: CMakeLists.txt  dllmain.cpp  game.hpp  setup.cpp  version.h.in
src/dinput8/: dinput8.cpp
src/game/: component.hpp  drawing.cpp  entity.hpp  events.cpp  game.cpp  game.hpp  input.cpp  itemapi.cpp  options.cpp  signatures.hpp  variant.hpp  variantdb.hpp  vec.hpp  weathermanager.cpp
src/game/struct/: app.hpp  audiomanagerfmod.hpp  background.cpp  background.hpp  baseapp.hpp  component.hpp  enetclient.hpp  entity.hpp  entityutils.cpp  entityutils.hpp  gametimer.hpp  iteminfomanager.hpp  loopingsound.hpp  miscutils.cpp  miscutils.hpp  playeritems.hpp  renderutils.cpp  renderutils.hpp  rtfont.hpp  variant.hpp  variantdb.hpp  vec.hpp  videomode.hpp
src/game/struct/components/: gamelogic.cpp  gamelogic.hpp  mapbg.hpp
src/game/struct/custom/: playmodoverlay.hpp
src/game/struct/graphics/: background.cpp  background.hpp  background_blank.cpp  background_blank.hpp  background_blood.cpp  background_blood.hpp  background_clouds.cpp  background_clouds.hpp  background_default.cpp  background_default.hpp  surface.cpp  surface.hpp
src/game/struct/net/: enet.hpp  gameupdatepacket.hpp
src/game/struct/world/: world.hpp  worldcamera.hpp  worldrenderer.hpp
src/patch/: patch.cpp  patch.hpp
src/patch/core/: about.cpp  config.cpp  integrity.cpp
src/patch/user/: audio.cpp  chat.cpp  framerate.cpp  input.cpp  items.cpp  jew.cpp  misc.cpp  net.cpp  performance_tweaks.cpp  playmodoverlay.cpp  render.cpp
src/patches/: aboutmenu.cpp  chat.cpp  render.cpp
src/utils/: hooking.hpp  memory.cpp  memory.hpp  pattern.cpp  pattern.hpp  utils.cpp  utils.hpp
